--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ scikit-learn==1.5.2
 matplotlib==3.9.2
 plotly==5.24.1
 seaborn==0.13.2
-ydata-profiling==4.9.0
-tqdm==4.66.5
+ydata-profiling>=4.17.0
+htmlmin>=0.1.12
